[feat] 펀딩 이미지 구현 (#350)
* [feat] 펀딩 이미지 구현

* [feat] work

* work